--- a/project.yaml
+++ b/project.yaml
@@ -14,8 +14,8 @@ actions:
     ## and add '.gz' to the output file path, to produce the output in compressed form to reduce file size.
 
   describe:
-    run: r:latest analysis/report.R
+    run: r:latest analysis/01_histogram.R
     needs: [generate_study_population]
     outputs:
       moderately_sensitive:
-        cohort: output/descriptive.png
+        cohort: output/histogram.png
