--- a/project.yaml
+++ b/project.yaml
@@ -13,8 +13,37 @@ actions:
     ## note: when running studies for real it is recommended to add the option --output-format='csv.gz' to the run command, 
     ## and add '.gz' to the output file path, to produce the output in compressed form to reduce file size.
 
+  #generate_report:
+  #  run: cohort-report:v3.0.0 output/input.csv
+  #  needs: [generate_study_population]
+  #  config:
+  #    variable_types:
+  #      dod_ons: date
+  #      pod_ons: categorical
+  #      cod_ons: categorical
+  #      sex: categorical
+  #      age: int
+  #      ethnicity6: categorical 
+  #      ethnicity6_sus: categorical 
+  #      imd: int
+  #      carehome: binary
+  #      carehome_type: categorical
+  #      hhold_size: int
+  #      ltc: binary
+  #      physical_ltc: binary
+  #      mental_ltc: binary
+  #      aevis_1yr: int
+  #      adm_1yr: int
+  #      emadm_1yr: int
+  #      eladm_1yr: int
+  #      gp_1yr: int
+  #  output_path: output/cohort_reports_outputs
+  #outputs: 
+  #  moderately_sensitive:
+  #    reports: output/cohort_reports_outputs/descriptives_input.html
+
   describe:
-    run: r:latest analysis/01_dod_histogram.R
+    run: r:latest analysis/XX_dod_histogram.R
     needs: [generate_study_population]
     outputs:
       moderately_sensitive:
