--- a/project.yaml
+++ b/project.yaml
@@ -20,9 +20,30 @@ actions:
   #  moderately_sensitive:
   #    reports: output/cohort_reports_outputs/descriptives_input.html
 
-  describe:
-    run: r:latest analysis/XX_dod_histogram.R
-    needs: [generate_study_population]
-    outputs:
-      moderately_sensitive:
-        cohort: output/dod_histogram.png
+  #describe:
+  #  run: r:latest analysis/XX_dod_histogram.R
+  #  needs: [generate_study_population]
+  #  outputs:
+  #    moderately_sensitive:
+  #      cohort: output/dod_histogram.png
+
+  #describe:
+  #  run: r:latest analysis/01_describe_cohorts.R
+  #  needs: [generate_study_population]
+  #  outputs:
+  #    moderately_sensitive:
+  #      deaths_cohort: deaths_cohort.csv
+  #      deaths_quarter: deaths_quarter.csv
+  #      dod_quarter_figures: output/dod_quarter.png
+  #      deaths_cohort_pod: deaths_cohort_pod.csv
+  #      deaths_quarter_pod: deaths_quarter_pod.csv
+  #      pod_figures: output/pod_cohort*.png
+  #      deaths_ratio: output/deaths_ratio_pod*.csv
+
+  #describe:
+  #  run: r:latest analysis/02_describe_service_use.R
+  #  needs: [generate_study_population]
+  #  outputs:
+  #    moderately_sensitive:
+  #      service_use_mean_cohort: service_use_mean_cohort.csv
+  #      service_use_mean_pod: service_use_mean_pod.csv
