--- a/project.yaml
+++ b/project.yaml
@@ -1,7 +1,7 @@
 version: '3.0'
 
 expectations:
-  population_size: 1000
+  population_size: 10000
 
 actions:
 
@@ -27,23 +27,23 @@ actions:
   #    moderately_sensitive:
   #      cohort: output/dod_histogram.png
 
-  #describe:
-  #  run: r:latest analysis/01_describe_cohorts.R
-  #  needs: [generate_study_population]
-  #  outputs:
-  #    moderately_sensitive:
-  #      deaths_cohort: deaths_cohort.csv
-  #      deaths_quarter: deaths_quarter.csv
-  #      dod_quarter_figures: output/dod_quarter.png
-  #      deaths_cohort_pod: deaths_cohort_pod.csv
-  #      deaths_quarter_pod: deaths_quarter_pod.csv
-  #      pod_figures: output/pod_cohort*.png
-  #      deaths_ratio: output/deaths_ratio_pod*.csv
+  describe_cohorts:
+    run: r:latest analysis/01_describe_cohorts.R
+    needs: [generate_study_population]
+    outputs:
+      moderately_sensitive:
+        deaths_cohort: output/deaths_cohort.csv
+        deaths_quarter: output/deaths_quarter.csv
+        dod_month_figure: output/dod_month.png
+        deaths_cohort_pod: output/deaths_cohort_pod.csv
+        deaths_quarter_pod: output/deaths_quarter_pod.csv
+        pod_figures: output/pod_cohort*.png
+        deaths_ratio: output/deaths_ratio_pod*.csv
 
-  #describe:
-  #  run: r:latest analysis/02_describe_service_use.R
-  #  needs: [generate_study_population]
-  #  outputs:
-  #    moderately_sensitive:
-  #      service_use_mean_cohort: service_use_mean_cohort.csv
-  #      service_use_mean_pod: service_use_mean_pod.csv
+  describe_service_use:
+    run: r:latest analysis/02_describe_service_use.R
+    needs: [generate_study_population]
+    outputs:
+      moderately_sensitive:
+        service_use_means: output/service_use_mean*.csv
+        service_use_ratios: output/service_use_ratio*.csv
