--- a/project.yaml
+++ b/project.yaml
@@ -32,10 +32,9 @@ actions:
     needs: [generate_study_population]
     outputs:
       moderately_sensitive:
-        log: logs/01_describe_cohorts_log.txt
         deaths_cohort: output/deaths_cohort.csv
         deaths_quarter: output/deaths_quarter.csv
-        dod_month_figure: output/dod_month.png
+        deaths_quarter_figure: output/deaths_quarter.png
         deaths_cohort_pod: output/deaths_cohort_pod.csv
         deaths_quarter_pod: output/deaths_quarter_pod.csv
         pod_figures: output/pod_cohort*.png
@@ -46,6 +45,5 @@ actions:
     needs: [generate_study_population]
     outputs:
       moderately_sensitive:
-        log: logs/02_describe_service_use_log.txt
         service_use_means: output/service_use_mean*.csv
         service_use_ratios: output/service_use_ratio*.csv
