--- a/project.yaml
+++ b/project.yaml
@@ -32,13 +32,13 @@ actions:
     needs: [generate_study_population]
     outputs:
       moderately_sensitive:
-        deaths_cohort: output/deaths_cohort.csv
-        deaths_quarter: output/deaths_quarter.csv
-        deaths_quarter_figure: output/deaths_quarter.png
-        deaths_cohort_pod: output/deaths_cohort_pod.csv
-        deaths_quarter_pod: output/deaths_quarter_pod.csv
-        pod_figures: output/pod_cohort*.png
-        deaths_ratio: output/deaths_ratio_pod*.csv
+        deaths_cohort: output/describe_cohorts/deaths_cohort.csv
+        deaths_quarter: output/describe_cohorts/deaths_quarter.csv
+        deaths_quarter_figure: output/describe_cohorts/deaths_quarter.png
+        deaths_cohort_pod: output/describe_cohorts/deaths_cohort_pod.csv
+        deaths_quarter_pod: output/describe_cohorts/deaths_quarter_pod.csv
+        pod_figures: output/describe_cohorts/pod_cohort*.png
+        deaths_ratio: output/describe_cohorts/deaths_ratio_pod*.csv
 
   describe_service_use:
     run: r:latest analysis/02_describe_service_use.R
