--- a/project.yaml
+++ b/project.yaml
@@ -37,7 +37,8 @@ actions:
         deaths_quarter_figure: output/describe_cohorts/deaths_quarter.png
         deaths_cohort_pod: output/describe_cohorts/deaths_cohort_pod.csv
         deaths_quarter_pod: output/describe_cohorts/deaths_quarter_pod.csv
-        pod_figures: output/describe_cohorts/pod_cohort*.png
+        deaths_pod_figures: output/describe_cohorts/deaths_pod_cohort*.png
+        deaths_month_ons: output/describe_cohorts/deaths_month*.csv
         deaths_ratio: output/describe_cohorts/deaths_ratio_pod*.csv
 
   describe_service_use:
