--- a/project.yaml
+++ b/project.yaml
@@ -11,14 +11,14 @@ actions:
       highly_sensitive:
         cohort: output/input.feather
 
-  #generate_report:
-  #  run: cohort-report:v3.0.0 output/input.feather
-  #  needs: [generate_study_population]
-  #  config:
-  #    output_path: output/cohort_reports_outputs
-  #outputs: 
-  #  moderately_sensitive:
-  #    reports: output/cohort_reports_outputs/descriptives_input.html
+  generate_report:
+    run: cohort-report:v3.0.0 output/input.feather
+    needs: [generate_study_population]
+    config:
+      output_path: output/cohort_reports_outputs
+  outputs: 
+    moderately_sensitive:
+      reports: output/cohort_reports_outputs/descriptives_input.html
 
   #describe:
   #  run: r:latest analysis/XX_dod_histogram.R
