Squashed commit of the following:
commit 5368ef82fdbffcb630ca819c5bae908e10bd636c
Author: Eilís <72603602+eiliskeeble@users.noreply.github.com>
Date:   Fri Apr 8 12:07:07 2022 +0100

    Plot size and resolution

commit 4fb6c29bc3fccf6594b5e8b0af0a3a2b86a283eb
Author: Eilís <72603602+eiliskeeble@users.noreply.github.com>
Date:   Fri Apr 8 11:57:01 2022 +0100

    Resolve final filename conflicts

commit 2cb7919177e8e254f22d7cb239286eeb20c65a85
Author: Eilís <72603602+eiliskeeble@users.noreply.github.com>
Date:   Fri Apr 8 11:30:33 2022 +0100

    Resolve conflicts

commit 153ab3f5a52e2a931a7b14eb34356886a649a6c8
Merge: 442ec67 d18e3bf
Author: Eilís <72603602+eiliskeeble@users.noreply.github.com>
Date:   Fri Apr 8 11:27:24 2022 +0100

    Merge branch 'main' into quality

commit 442ec675faf0fc6eae735bce9045d6641be8e114
Author: Eilís <eiliskeeble@msn.com>
Date:   Thu Apr 7 17:18:04 2022 +0100

    Proportion of ONS deaths charts

commit fb4785105eeb7a801b69a8afedadb4edac700654
Author: Eilís <eiliskeeble@msn.com>
Date:   Thu Apr 7 16:58:09 2022 +0100

    Fix cause of death mismatches

commit 63fc912109a0c6a937170d21d6b2c6ce4b4175a9
Author: Eilís <eiliskeeble@msn.com>
Date:   Wed Apr 6 16:17:10 2022 +0100

    Function to loop through individual codes in a codelist

commit dea283f7218e69fab035feb1f26e5febd557e3d3
Merge: 654d2ce c22156f
Author: Eilís <eiliskeeble@msn.com>
Date:   Wed Apr 6 15:15:12 2022 +0100

    Merge branch 'main' into quality

commit 654d2cea85ee4d6a30395c12d1bed2bcba6bca8c
Author: Eilís <eiliskeeble@msn.com>
Date:   Mon Mar 28 17:14:32 2022 +0100

    Practice measure variation decile charts

commit 48eb6b8770596b32c6a368cc7d22a242b3c965c2
Author: Eilís <eiliskeeble@msn.com>
Date:   Fri Mar 25 17:19:01 2022 +0000

    First attempt at measures by practice and month

--- a/project.yaml
+++ b/project.yaml
@@ -11,6 +11,19 @@ actions:
       highly_sensitive:
         cohort: output/input.feather
 
+  generate_study_population_measures:
+    run: cohortextractor:latest generate_cohort --study-definition study_definition_practice_measures --output-format feather --index-date-range "2019-03-01 to 2021-02-01 by month" --skip-existing --output-dir=output/practice_measures
+    outputs:
+      highly_sensitive:
+        cohort: output/practice_measures/input_*.feather
+
+  generate_practice_measures:
+      run: cohortextractor:latest generate_measures --study-definition study_definition_practice_measures --skip-existing --output-dir=output/practice_measures
+      needs: [generate_study_population_measures]
+      outputs:
+        moderately_sensitive:
+          measure_csv: output/practice_measures/measure_*.csv
+
   generate_report:
     run: cohort-report:v3.0.0 output/input.feather
     needs: [generate_study_population]
@@ -32,8 +45,8 @@ actions:
         deaths_cohort_pod: output/describe_cohorts/overall_death_counts/deaths_cohort_pod.csv
         deaths_quarter_pod: output/describe_cohorts/overall_death_counts/deaths_quarter_pod.csv
         deaths_pod_figures: output/describe_cohorts/overall_death_counts/deaths_pod_cohort*.png
-        deaths_quarter_ons: output/describe_cohorts/ons_death_comparisons/deaths_quarter*.csv
-        deaths_month_ons: output/describe_cohorts/ons_death_comparisons/deaths_month*.csv
+        deaths_quarter_ons: output/describe_cohorts/ons_death_comparisons/deaths_ons_quarter*.csv
+        deaths_month_ons: output/describe_cohorts/ons_death_comparisons/deaths_ons_month*.csv
         death_ratios_cohort: output/describe_cohorts/death_ratios_cohort/death_ratio_cohort*.csv
         death_ratios_pod_cohort: output/describe_cohorts/death_ratios_pod_cohort/death_ratio_pod_cohort*.csv
 
@@ -44,3 +57,10 @@ actions:
       moderately_sensitive:
         service_use_means: output/describe_service_use/service_use_mean*.csv
         service_use_ratios: output/describe_service_use/service_use_ratio*.csv
+
+  practice_measures_charts:
+    run: r:latest analysis/03_practice_measures_charts.R
+    needs: [generate_study_population_measures, generate_practice_measures]
+    outputs:
+      moderately_sensitive:
+        deciles_charts: output/practice_measures/charts/deciles_*.png
