--- a/project.yaml
+++ b/project.yaml
@@ -29,11 +29,12 @@ actions:
         deaths_cohort: output/describe_cohorts/overall_death_counts/deaths_cohort.csv
         deaths_quarter: output/describe_cohorts/overall_death_counts/deaths_quarter.csv
         deaths_quarter_figure: output/describe_cohorts/overall_death_counts/deaths_quarter.png
-        deaths_cohort_pod: output/describe_cohorts/overall_death_counts/deaths_cohort_pod.csv
+        deaths_cohort_pod: output/describe_cohorts/overall_death_counts/deaths_cohort_pod*.csv
         deaths_quarter_pod: output/describe_cohorts/overall_death_counts/deaths_quarter_pod.csv
         deaths_pod_figures: output/describe_cohorts/overall_death_counts/deaths_pod_cohort*.png
         deaths_quarter_ons: output/describe_cohorts/ons_death_comparisons/deaths_ons_quarter*.csv
         deaths_month_ons: output/describe_cohorts/ons_death_comparisons/deaths_ons_month*.csv
+        deaths_ons_plots: output/describe_cohorts/ons_death_comparisons/deaths_ons*.png
         summary_table: output/describe_cohorts/cohorts_summary_table.csv
         death_ratios_cohort: output/describe_cohorts/death_ratios_cohort/death_ratio_cohort*.csv
         death_ratios_pod_cohort: output/describe_cohorts/death_ratios_pod_cohort/death_ratio_pod_cohort*.csv
