--- a/project.yaml
+++ b/project.yaml
@@ -59,7 +59,9 @@ actions:
     needs: [generate_study_population]
     outputs:
       moderately_sensitive:
-        service_use_cohort: output/describe_service_use_home/service_use_cohort*.csv
-        gp_complete_service_use_cohort: output/describe_service_use_home/complete_gp_history/gp_service_use_cohort*.csv
-        service_use_quarter: output/describe_service_use_home/service_use_quarter*.csv
-        gp_complete_service_use_quarter: output/describe_service_use_home/complete_gp_history/gp_service_use_quarter*.csv
+        service_use_cohort: output/describe_service_use_home/service_use_cohort_home_*.csv
+        gp_complete_service_use_cohort: output/describe_service_use_home/complete_gp_history/gp_service_use_cohort_home_*.csv
+        service_use_quarter: output/describe_service_use_home/service_use_quarter_home_*.csv
+        gp_complete_service_use_quarter: output/describe_service_use_home/complete_gp_history/gp_service_use_quarter_home_*.csv
+        service_use_quarter_plots: output/describe_service_use_home/service_use_quarter_home_*.pdf
+        gp_complete_service_use_quarter_plots: output/describe_service_use_home/complete_gp_history/gp_service_use_quarter_home_*.pdf
