--- a/project.yaml
+++ b/project.yaml
@@ -62,8 +62,14 @@ actions:
     outputs:
       moderately_sensitive:
         service_use_cohort: output/describe_service_use_home/service_use_cohort_home_*.csv
-        gp_complete_service_use_cohort: output/describe_service_use_home/complete_gp_history/gp_service_use_cohort_home_*.csv
+        gp_complete_service_use_cohort: output/describe_service_use_home/complete_gp_history/gp_service_use_cohort_home_*.csv        
+        service_use_cohort_plots: output/describe_service_use_home/plots/service_use_cohort_home_*.pdf        
+        service_use_cohort_prop_plots: output/describe_service_use_home/plots/service_prop_cohort_home_*.pdf
+        gp_complete_service_use_cohort_plots: output/describe_service_use_home/complete_gp_history/plots/gp_service_use_cohort_home_*.pdf
+        gp_complete_service_use_cohort_prop_plots: output/describe_service_use_home/complete_gp_history/plots/gp_service_prop_cohort_home_*.pdf
         service_use_quarter: output/describe_service_use_home/service_use_quart_home_*.csv
         gp_complete_service_use_quarter: output/describe_service_use_home/complete_gp_history/gp_service_use_quart_home_*.csv
         service_use_quarter_plots: output/describe_service_use_home/plots/service_use_quart_home_*.pdf
+        service_use_quarter_prop_plots: output/describe_service_use_home/plots/service_prop_quart_home_*.pdf
         gp_complete_service_use_quarter_plots: output/describe_service_use_home/complete_gp_history/plots/gp_service_use_quart_home_*.pdf
+        gp_complete_service_use_quarter_prop_plots: output/describe_service_use_home/complete_gp_history/plots/gp_service_prop_quart_home_*.pdf
