--- a/project.yaml
+++ b/project.yaml
@@ -70,26 +70,44 @@ actions:
         gp_complete_service_use_means: output/describe_service_use/complete_gp_history/gp_service_use_mean*.csv
         gp_complete_service_use_plots: output/describe_service_use/complete_gp_history/plots/gp_service_use_mean*.pdf
 
-  describe_service_use_home: 
-    run: r:latest analysis/03_describe_service_use_home.R
+  describe_service_use_home_cohort: 
+    run: r:latest analysis/03_describe_service_use_home_cohort.R
     needs: [generate_study_population]
     outputs:
       moderately_sensitive:
-        service_use_cohort: output/describe_service_use_home/service_use_cohort_home*.csv
-        gp_complete_service_use_cohort: output/describe_service_use_home/complete_gp_history/gp_service_use_cohort_home*.csv        
+        service_use_cohort: output/describe_service_use_home/service_use_cohort_home*.csv     
         service_use_cohort_plots: output/describe_service_use_home/plots/service_use_cohort_home_*.pdf        
         service_use_cohort_prop_plots: output/describe_service_use_home/plots/service_prop_cohort_home_*.pdf
+
+  describe_service_use_home_quarter: 
+    run: r:latest analysis/04_describe_service_use_home_quarter.R
+    needs: [generate_study_population]
+    outputs:
+      moderately_sensitive:
+        service_use_quarter: output/describe_service_use_home/service_use_quart_home.csv
+        service_use_quarter_plots: output/describe_service_use_home/plots/service_use_quart_home*.pdf
+        service_use_quarter_prop_plots: output/describe_service_use_home/plots/service_prop_quart_home*.pdf
+
+  describe_service_use_home_gp_cohort: 
+    run: r:latest analysis/05_describe_service_use_home_gp_cohort.R
+    needs: [generate_study_population]
+    outputs:
+      moderately_sensitive:
+        gp_complete_service_use_cohort: output/describe_service_use_home/complete_gp_history/gp_service_use_cohort_home*.csv     
         gp_complete_service_use_cohort_plots: output/describe_service_use_home/complete_gp_history/plots/gp_service_use_cohort_home_*.pdf
         gp_complete_service_use_cohort_prop_plots: output/describe_service_use_home/complete_gp_history/plots/gp_service_prop_cohort_home_*.pdf
-        service_use_quarter: output/describe_service_use_home/service_use_quart_home_*.csv
-        gp_complete_service_use_quarter: output/describe_service_use_home/complete_gp_history/gp_service_use_quart_home_*.csv
-        service_use_quarter_plots: output/describe_service_use_home/plots/service_use_quart_home_*.pdf
-        service_use_quarter_prop_plots: output/describe_service_use_home/plots/service_prop_quart_home_*.pdf
+
+  describe_service_use_home_gp_quarter: 
+    run: r:latest analysis/06_describe_service_use_home_gp_quarter.R
+    needs: [generate_study_population]
+    outputs:
+      moderately_sensitive:
+        gp_complete_service_use_quarter: output/describe_service_use_home/complete_gp_history/gp_service_use_quart_home.csv
         gp_complete_service_use_quarter_plots: output/describe_service_use_home/complete_gp_history/plots/gp_service_use_quart_home_*.pdf
         gp_complete_service_use_quarter_prop_plots: output/describe_service_use_home/complete_gp_history/plots/gp_service_prop_quart_home_*.pdf
 
   practice_measures_plots:
-    run: r:latest analysis/04_practice_measures_plots.R
+    run: r:latest analysis/07_practice_measures_plots.R
     needs: [generate_practice_measures]
     outputs:
       moderately_sensitive:
