Revisions after QA
Change rounding to 3 decimal places. Drop GP region and GP LA IMD quintile. Add export of data tables for decile plots.

--- a/project.yaml
+++ b/project.yaml
@@ -111,4 +111,5 @@ actions:
     needs: [generate_practice_measures]
     outputs:
       moderately_sensitive:
+        deciles_data: output/practice_measures/plots/deciles_*.csv
         deciles_plots: output/practice_measures/plots/deciles_*.png
