--- a/project.yaml
+++ b/project.yaml
@@ -154,3 +154,12 @@ actions:
     outputs:
       highly_sensitive:
         cohort: output/dataset.csv
+
+  validate_medication_codelist_counts:
+    run: >
+      python:latest
+        python analysis/validate_prescription_counts.py
+    needs: [generate_medication_codelist_comprison_dataset]
+    outputs:
+      moderately_sensitive:
+        totals: output/validation_totals.csv
