--- a/project.yaml
+++ b/project.yaml
@@ -4,29 +4,20 @@ expectations:
   population_size: 10000
 
 actions:
-  generate_cohort:
-    run: >
-      cohortextractor:latest
-        generate_cohort --study-definition study_definition_validation
-        --output-file output/cohort.csv
-    outputs:
-      highly_sensitive:
-        cohort: output/cohort.csv
-
   generate_dataset:
     run: >
       databuilder:v0
         generate-dataset analysis/dataset_definition.py
-        --output output/dataset.csv
+        --output output/dataset.arrow
     outputs:
       highly_sensitive:
-        cohort: output/dataset.csv
+        cohort: output/dataset.arrow
 
   count_medication_events:
     run: >
       python:latest
         python analysis/count_medication_events.py
-    needs: [generate_cohort, generate_dataset]
+    needs: [generate_dataset]
     outputs:
       moderately_sensitive:
         counts: output/medication-counts.json
