--- a/project.yaml
+++ b/project.yaml
@@ -151,3 +151,18 @@ actions:
     outputs:
       highly_sensitive:
         cohort: output/os_reports/input_os_reports.feather
+          
+  os_report_charts:
+    run: r:latest analysis/10_eol_report_charts.R
+    needs: [generate_study_population_os_reports]
+    outputs:
+      moderately_sensitive:
+        monthly_deaths_place: output/os_reports/deaths_month_plot.png
+        monthly_gp_place: output/os_reports/gp_month_plot.png
+
+  os_report:
+    run: r:latest analysis/10a_eol_report_html.R
+    needs: [os_report_charts]
+    outputs:
+      moderately_sensitive:
+        os_report: output/os_reports/eol_report.html
